--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ pytz==2021.3
 sqlparse==0.4.2
 typing_extensions==4.0.1
 django-filter
-import_module
+# import_module ==
 import_file
+#importlib == 1.0.4
